News: parse the real Minecraft news API payload
The feed (launchercontent.mojang.com/v2/news.json) returns entries with an
HTML 'text' body and optional {entries:[...]} wrapper — not shortText/
longText keys, so cards and detail pages rendered blank (news 'wouldn't
load'). Now: accepts bare-array and entries-wrapped shapes, derives the
card blurb by stripping HTML/unescaping entities, falls back to the legacy
/news.json endpoint, keeps raw HTML for the reader, never loses fresh data
if the cache write fails. Selftest 144 -> 152 (real-payload fixture).

Co-authored-by: arena-agent <297053741+arena-agent@users.noreply.github.com>